src/test/ui/parser/removed-syntax-mode.stderr
error: expected argument name, found `+`
  --> $DIR/removed-syntax-mode.rs:3:6
   |
LL | fn f(+x: isize) {}
   |      ^ expected argument name

error: aborting due to previous error

